# dlibdemo

./: README.md  linux centos 搭建pytorch环境  美唇算法
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/ai/dlibdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ImageWarp.cpp  ImageWarp.h  blush.cpp  blush.h  dlib_proc.h  eyebrow.h  eyebrowDemo.cpp  eyelash.cpp  eyelash.h  eyeliner.cpp  eyeliner.h  eyeshadow.cpp  eyeshadow.h  jni_bridge.cpp  jni_bridge.h  lip_makeup.cpp  lip_makeup.h  native-lib.cpp  opencv_utility.cpp  opencv_utility.h  proc_img.cpp  skin_makeup.cpp  skin_makeup.h
app/src/main/cpp/dlib/: revision.h
app/src/main/java/com/example/ai/dlibdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/res/layout/: activity_main.xml
app/src/main/res/res/values/: strings.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ai/dlibdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
